# r2-d2

./: package.json  pnpm-lock.yaml
apps/api/: .env.example  .gitignore  README.md  compose.yml  dependencies.py  error.py  logger.py  main.py  models.py  package.json  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1485fb3cdad2_cascade_extraction_on_document_delete.py  1deb6d1d71c7_add_extracted_usage_log_table.py  3066bddc2656_add_document_table.py  4f94071460b2_add_conversation_and_chat_table.py  5280a559db93_add_user_table.py  5f0ff694cc21_add_extracted_section_table.py  80da663cc1dc_add_knowledge_base.py  87f793799088_add_unique_constraint_for_knowledge_.py  985b26a331ab_add_extraction_status_for_document_table.py  9f605a87fc8f_add_user_account.py  c0644c46e6e5_add_queue_extraction_status.py  c6f97799329e_add_user_table.py  d11eaf358878_add_user_for_knowledge_base.py
apps/api/core/: config.py  db.py  security.py
apps/api/modules/authentication/: router.py  service.py
apps/api/modules/chat/: dependencies.py  router.py  service.py
apps/api/modules/document_chat/: dependencies.py  router.py  schemas.py  service.py
apps/api/modules/document_extraction/: dependencies.py  docling_extractor.py  router.py  schemas.py  service.py  utils.py
apps/api/modules/file_storage/: router.py  schemas.py  service.py
apps/api/modules/graph_agent/: agent.py  dependencies.py  router.py  schema.py  tools.py
apps/api/modules/kafka/: consumer.py  dependencies.py  enums.py  producer.py  service.py
apps/api/modules/knowledge_base/: dependencies.py  router.py  schemas.py  service.py
apps/api/modules/users/: router.py  service.py
apps/api/modules/utils/: pagination.py
apps/api/notebooks/: excel-gent.ipynb  human-in-a-loop.ipynb  wait-user-input.ipynb
apps/api/routes/: document_extraction.py  main.py
apps/api/test/: lang-graph.py
apps/web/: eslint.config.js  (+2 more)
(+92 files in other folders)
