[project]
name = "r2-d2-api"
version = "0.1.0"
description = "Fast API for R2-D2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.15.1",
    "docling>=2.25.2",
    "fastapi[standard]>=0.115.11",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.2",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
