[project]
name = "r2-d2-api"
version = "0.1.0"
description = "Fast API for R2-D2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiokafka>=0.12.0",
    "alembic>=1.15.1",
    "bcrypt==4.0.1",
    "docling>=2.25.2",
    "duckduckgo-search>=8.0.0",
    "fastapi[standard]>=0.115.11",
    "gpustat>=1.1.1",
    "kafka-python>=2.1.4",
    "langchain-community>=0.3.21",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.2",
    "openai>=1.65.2",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "rq>=2.3.1",
    "sqlmodel>=0.0.24",
    "theflow>=0.8.6",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
